camera viewer align issue fixed
committed

--- a/styles.css
+++ b/styles.css
@@ -203,3 +203,11 @@ input[type=range]:focus::-ms-fill-upper {
     box-shadow: 0px 0px 1px #000;
     border-radius: 25px;    
 }
+
+.btn-default:hover{
+  background-color:#b2dfdb;
+}
+.btn-default{
+  width: 50%;
+  border-radius: 0px;
+}
